[tool.poetry]
name = "cifracesar2"
version = "0.1.0"
description = "Implementação da cifra de cesar"
authors = ["Jeziel Almeida <jeziel.almeida16@gmail.com>"]
readme = "README.md"
packages = [{include = "cifra_cesar"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
isort = "^5.12.0"
mkdocs = "^1.4.2"
pip-audit = "^2.4.14"
blue = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
